[gd_scene load_steps=3 format=3 uid="uid://bh5n7m8k1l2p4"]

[ext_resource type="Theme" uid="uid://b4q2xocvxk8y5" path="res://assets/themes/ui_theme.tres" id="1_z3x4c"]
[ext_resource type="Script" path="res://scripts/main/MainMenu.gd" id="2_main_menu"]

[node name="MainMenu" type="Control"]
script = ExtResource("2_main_menu")
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_z3x4c")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0.1, 0.1, 0.2, 1)

[node name="TitleLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -150.0
offset_top = -200.0
offset_right = 150.0
offset_bottom = -150.0
theme_override_font_sizes/font_size = 36
text = "Coalition 150"
horizontal_alignment = 1
vertical_alignment = 1

[node name="MenuContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -100.0
offset_top = -50.0
offset_right = 100.0
offset_bottom = 150.0

[node name="StartButton" type="Button" parent="MenuContainer"]
layout_mode = 2
text = "Start Game"

[node name="LoadButton" type="Button" parent="MenuContainer"]
layout_mode = 2
disabled = true
text = "Load Game"

[node name="OptionsButton" type="Button" parent="MenuContainer"]
layout_mode = 2
text = "Options"

[node name="ExitButton" type="Button" parent="MenuContainer"]
layout_mode = 2
text = "Exit"

[node name="StatusLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -200.0
offset_top = -50.0
grow_horizontal = 0
grow_vertical = 0
text = "Main Menu Loaded Successfully"
horizontal_alignment = 2